--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table>
     <tr>
-      <td><img src="C:\Users\priya\Desktop\Web development\HTML - Personal site\ME.jpeg" width=300 height=300 alt="My profile picture"></td>
+      <td><img src="https://github.com/PriyankaPrashanth/cv/blob/main/ME.jpeg?raw=true" width=300 height=300 alt="My profile picture"></td>
       <td>
         <h1>Priyanka Prashanth kumar</h1>
         <p>
